--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World - Richo Arbianto</title>
-</head>
-<body>
-    <div class="welcome">Hello World!</div><br>
-    <div class="time"></div>
-</body>
-<script>
-    const time = document.querySelector('.time');
-    setInterval(() => {
-        time.textContent = 'Time : ' + new Date();
-    }, 1000);
-</script>
+<html>
+  <body>
+    <h1>Hai Cantik!</h1>
+    <img src="https://c.tenor.com/Z8ezUHZzcLoAAAAC/love.gif" />
+    <h1>Maukah kamu menjadi pacarku?</h1>
+    <button id="btn_mau" onclick="alert('I LOVE YOU')">Mau</button>&nbsp;
+    <button id="btn_gamau" onclick="gamau(this)" style="position: absolute">
+      Gamau
+    </button>
+  </body>
+  <script>
+    function gamau(id) {
+      var mau = document.getElementById("btn_mau");
+      var i = Math.floor(Math.random() * 300) + 1;
+      var j = Math.floor(Math.random() * 100) + mau.offsetTop;
+      id.style.left = i + "px";
+      id.style.top = j + "px";
+    }
+  </script>
 </html>
