--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <html>
   <body>
-    <h1>Hai Cantik!</h1>
-    <img src="https://c.tenor.com/Z8ezUHZzcLoAAAAC/love.gif" />
-    <h2>Maukah kamu menjadi pacarku?</h1>
-    <button id="btn_mau" onclick="alert('I LOVE YOU')">Mau</button>&nbsp;
-    <button id="btn_gamau" onclick="gamau(this)" style="position: absolute">
+    <center>
+      <h1>Hai Cantik!</h1>
+      <img src="https://c.tenor.com/Z8ezUHZzcLoAAAAC/love.gif" />
+      <h2>Maukah kamu menjadi pacarku?</h1>
+      <button id="btn_mau" onclick="alert('I LOVE YOU')">Mau</button>&nbsp;
+      <button id="btn_gamau" onclick="gamau(this)" style="position: absolute">
       Gamau
-    </button>
+      </button>
+    </center>
   </body>
   <script>
     function gamau(id) {
