--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       var mau = document.getElementById("btn_mau");
       var i = Math.floor(Math.random() * 300) + 1;
       var j = Math.floor(Math.random() * 30) + mau.offsetTop;
-      id style.center = i + "px";
+      var k = Math.floor(Math.random() * 50) + mau.offsetTop;
+      id.style.right = i + "px";
+      id.style.left = k + "px";
       id.style.top = j + "px";
     }
   </script>
