--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <html>
+<head>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
   <body>
-    <center>
-      <h2>Hai Cantik!</h1>
-      <img width="300px" height="300px" src="https://c.tenor.com/Z8ezUHZzcLoAAAAC/love.gif" />
-      <h3>Maukah kamu menjadi pacarku?</h1>
-      <button id="btn_mau" onclick="alert('I LOVE YOU')">Mau</button>&nbsp;
-      <button id="btn_gamau" onclick="gamau(this)" style="position: absolute">
-      Gamau
-      </button>
-    </center>
+    <h1>Hai Cantik!</h1>
+    <img src="https://c.tenor.com/Z8ezUHZzcLoAAAAC/love.gif" />
+    <h2>Maukah kamu menjadi pacarku?</h1>
+    <button id="btn_mau" onclick="alert('I LOVE YOU')">Mau</button>&nbsp;
+    <button id="btn_gamau" onclick="gamau(this)" style="position: absolute">
+    Gamau
+    </button>
   </body>
   <script>
     function gamau(id) {
       var mau = document.getElementById("btn_mau");
       var i = Math.floor(Math.random() * 300) + 1;
-      var j = Math.floor(Math.random() * 30) + mau.offsetTop;
+      var j = Math.floor(Math.random() * 100) + mau.offsetTop;
       id.style.left = i + "px";
       id.style.top = j + "px";
     }
