--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <html>
 <head>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
   <body>
     <h1>Hai Cantik!</h1>
     <img src="https://c.tenor.com/Z8ezUHZzcLoAAAAC/love.gif" />
-    <h2>Maukah kamu menjadi pacarku?</h1>
-    <button id="btn_mau" onclick="alert('I LOVE YOU')">Mau</button>&nbsp;
-    <button id="btn_gamau" onclick="gamau(this)" style="position: absolute">
-    Gamau
-    </button>
+    <center>
+      <h2>Maukah kamu menjadi pacarku?</h1>
+      <button id="btn_mau" onclick="alert('I LOVE YOU')">Mau</button>&nbsp;
+      <button id="btn_gamau" onclick="gamau(this)" style="position: absolute">
+      Gamau
+     </button>
+    </center>
   </body>
   <script>
     function gamau(id) {
