--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       <h1>Hai Cantik!</h1>
       <img src="https://c.tenor.com/Z8ezUHZzcLoAAAAC/love.gif" />
       <h2>Maukah kamu menjadi pacarku?</h1>
-      <button style="margin-right:25px" id="btn_mau" onclick="alert('I LOVE YOU')">Mau</button>&nbsp;
-      <button id="btn_gamau" onclick="gamau(this)" style="position: absolute">
+      <button style="margin-right:35px" id="btn_mau" onclick="alert('I LOVE YOU')">Mau</button>&nbsp;
+      <button style="margin-right:25px" id="btn_gamau" onclick="gamau(this)" style="position: absolute">
       Gamau
      </button>
     </center>
