--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     <center>
       <h1>Hai Cantik!</h1>
-      <img src="https://c.tenor.com/Z8ezUHZzcLoAAAAC/love.gif" />
+      <img src="https://i.ibb.co/Bf64MtY/IMG-20220731-163653.jpg" />
       <h2>Maukah kamu menjadi pacarku?</h1>
       <button style="margin-left:-50px" id="btn_mau" onclick="alert('I LOVE YOU')">Mau</button>&nbsp;
       <button id="btn_gamau" onclick="gamau(this)" style="position: absolute">
