--- a/index.html
+++ b/index.html
@@ -3,23 +3,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
   <body>
-    <center>
-      <h1>Hai Cantik!</h1>
-      <img src="https://i.ibb.co/Bf64MtY/IMG-20220731-163653.jpg" height="300px" width="200px"/>
-      <h2>Maukah kamu menjadi pacarku?</h1>
-      <button style="margin-left:-50px" id="btn_mau" onclick="alert('I LOVE YOU')">Mau</button>&nbsp;
-      <button id="btn_gamau" onclick="gamau(this)" style="position: absolute">
-      Gamau
-     </button>
-    </center>
+    <img alt="404" src="https://illustatus.herokuapp.com/?title=Oops,%20Page%20not%20found&fill=%234f86ed"/>
   </body>
-  <script>
-    function gamau(id) {
-      var mau = document.getElementById("btn_mau");
-      var i = Math.floor(Math.random() * 300) + 1;
-      var j = Math.floor(Math.random() * 100) + mau.offsetTop;
-      id.style.left = i + "px";
-      id.style.top = j + "px";
-    }
-  </script>
 </html>
